--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fake e-commerce api",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,15 @@
   },
   "homepage": "https://github.com/jarihant701/ecommerce-api#readme",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "autoprefixer": "^10.3.1",
     "cors": "^2.8.5",
+    "cssnano": "^5.0.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "postcss": "^8.3.5",
+    "postcss-cli": "^8.3.1",
+    "tailwindcss": "^2.2.4"
   }
 }
